<resources>
    <string name="app_name">Apex Code Assesment</string>
    <string name="action_settings">Settings</string>
    <string name="my_random_user">My random user</string>
    <string name="view_details">View details</string>
    <string name="first_last_name">%1$s %2$s</string>
    <string name="details_name">Name: %1$s %2$s</string>
    <string name="details_email">Email: %s</string>
    <string name="details_location">Location: (%1$s, %2$s)</string>
    <string name="calculate_distance_button_details">Calculate distance from current location</string>
    <string name="calculate_distance_button">Calculate distance</string>
    <string name="location_random_user">Location of random user: (%1$s, %2$s)</string>
    <string name="location_phone">Location of this phone: (%1$s, %2$s)</string>
    <string name="location_result_miles">[%f] miles</string>
    <string name="undefined_error_message">Please, try again with another input. If the error appears again, please, contact support.</string>
    <string name="connection_error_message">Please, check your connection or try again later</string>
    <string name="btn_title_show_user_list">Show 10 users</string>
    <string name="btn_title_refresh_random_user">Refresh random user</string>
    <string name="email_label">Email:</string>
    <string name="name_label">Name:</string>
    <string name="main_image_content_desc">%s Image</string>
    <string name="fetch_random_user">Refresh random user</string>
    <string name="details_image_content_desc">It is a detail image of user</string>
    <string name="item_image_content_desc">Item image</string>

</resources>