<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

  <TextView
      android:id="@+id/main_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/my_random_user"
      android:textAppearance="?textAppearanceHeadline4"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/main_image"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginTop="8dp"
      android:background="#33aaaaaa"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/main_title"
      android:contentDescription="@string/main_image_content_desc" />

  <TextView
      android:id="@+id/main_name_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/name_label"
      android:textAppearance="?textAppearanceBody2"
      android:textStyle="bold"
      app:layout_constraintStart_toEndOf="@+id/main_image"
      app:layout_constraintTop_toTopOf="@+id/main_image" />

  <TextView
      android:id="@+id/main_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?textAppearanceBody2"
      app:layout_constraintBottom_toBottomOf="@+id/main_name_label"
      app:layout_constraintStart_toEndOf="@+id/main_name_label"
      app:layout_constraintTop_toTopOf="@+id/main_name_label"
      tools:text="Jon" />

  <TextView
      android:id="@+id/main_email_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/email_label"
      android:textAppearance="?textAppearanceBody2"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="@+id/main_name_label"
      app:layout_constraintTop_toBottomOf="@+id/main_name_label" />

  <TextView
      android:id="@+id/main_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?textAppearanceBody2"
      app:layout_constraintBottom_toBottomOf="@+id/main_email_label"
      app:layout_constraintStart_toEndOf="@+id/main_email_label"
      app:layout_constraintTop_toTopOf="@+id/main_email_label"
      tools:text="robert@test.com" />

  <Button
      android:id="@+id/main_see_details_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/view_details"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/main_name_label"
      app:layout_constraintTop_toBottomOf="@+id/main_email" />

  <Button
      android:id="@+id/main_refresh_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/btn_title_refresh_random_user"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/main_image" />

  <View
      android:id="@+id/main_divider"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:layout_marginTop="16dp"
      android:background="#11111111"
      app:layout_constraintEnd_toEndOf="@+id/main_refresh_button"
      app:layout_constraintStart_toStartOf="@+id/main_refresh_button"
      app:layout_constraintTop_toBottomOf="@+id/main_refresh_button" />

  <Button
      android:id="@+id/main_user_list_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/main_divider"
      android:layout_marginTop="16dp"
      android:text="@string/btn_title_show_user_list"
      app:layout_constraintEnd_toEndOf="@+id/main_refresh_button"
      app:layout_constraintStart_toStartOf="@+id/main_refresh_button"
      app:layout_constraintTop_toBottomOf="@+id/main_divider" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/main_user_list"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/main_user_list_button" />

  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>